# phase-reconstruction

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  analyze_measurements.py  codespaces_info.md  crucial_realization.md  digital_twin_reconstruction_approaches.md  gaussian_smoothing.py  main.py  measured_data_reconstruction.ipynb  measured_data_reconstruction.py  multi_plane_reconstruction.py  multi_plane_reconstruction_plan.md  multi_plane_reconstruction_plan_v3.md  optimization_results.md  profiling_results.prof  pyproject.toml  read_measurement.py  real_data_reconstruction.py  refactoring_plan.md  run_perturbation_tests.py  simulated_data_reconstruction.ipynb  simulated_data_reconstruction.py  source_pointcloud.pkl  two_sources_simulation.py  vectorized_channel_matrix_plan.md
conf/: config.yaml  fake_data.yaml  integration_test_sim_train_test.yaml  measured_data.yaml  multi_plane_config.yaml  perturbation_analysis.yaml  real_single_plane.yaml  real_train_test_separate.yaml  real_train_test_split.yaml  sensitivity_analysis.yaml  simulated_data.yaml  simulated_single_plane_replica.yaml  simulated_two_plane.yaml  test_multi_train_single_test.yaml  test_xy_yz_train_test.yaml  test_xz_xy_train_test.yaml
cube_environment_results/: reconstruction_results.pkl
measurement_data/: analyze_measurements.py  read_measurement.py  x0_zy.pickle  x400_zy.pickle
papers/: eucap-paper.md  field_reconstruction_framework.aux  field_reconstruction_framework.out  field_reconstruction_framework.tex  nirvawave-paper.md
perturbation_analysis/: generate_demo_plots.py  perturbation_analysis_tool.py  perturbation_effect_explanation.md
perturbation_animations/: README.md  generate_perturbation_animations.py
profiling/: PERFORMANCE_ANALYSIS.md  PERFORMANCE_SCALING.md  __init__.py  benchmark_optimizations.py  benchmarker.py  performance_optimization.py  profile_test.py  profiler.py  utils.py
real_data_results/: reconstruction_results.pkl
sensitivity_analysis/: __init__.py  improved_sensitivity_visualization.py  run_sensitivity_analysis.py  sensitivity_analysis.py  sensitivity_analysis_README.md
sensitivity_results/: sensitivity_num_sources_vs_resolution_data.npz  sensitivity_num_sources_vs_wall_points_data.npz  sensitivity_resolution_vs_wall_points_data.npz
src/: config_types.py  create_channel_matrix.py  evaluation.py  (+9 more)
(+112 files in other folders)
