[tool.black]
line-length = 100

[tool.ruff]
# Same as Black.
line-length = 100
# Enable Pyflakes `E` and `F` codes by default.
# Enable flake8-bugbear `B` codes by default.
# Enable isort `I` codes by default.
# Enable flake8-quotes `Q` codes by default.
# Enable flake8-comprehensions `C4` codes by default.
# Enable pyupgrade `UP` codes by default.
select = ["E", "F", "W", "I", "B", "Q", "C4", "UP"]
ignore = []

# Allow unused variables when underscore-prefixed.
# ignore = ["F841"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "sensitivity_results", # Exclude generated results
    "figs", # Exclude generated figures
    "papers", # Exclude paper files
    "measurement_analysis", # Exclude data analysis dirs
    "perturbation_analysis/plots", # Exclude generated plots
]

# Assume Python 3.8+
target-version = "py38"

[tool.ruff.lint]
# Allow unused variables in `__init__.py` files.
ignore = ["F401"] # Ignore unused imports for now, can tighten later

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.poetry]
packages = [
    { include = "phase_reconstruction", from = "src" },
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.1.0"

[project]
name = "phase-reconstruction"
version = "0.1.0"
description = ""
authors = [
    {name = "rwydaegh",email = "109762571+rwydaegh@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
